@@ -9,6 +9,8 @@
  * For the full copyright and license information, please view the LICENSE
  *  file that was distributed with this source code.
  *
+ * @since 2.0.3
+ *
  * @license MIT
  */
 
@@ -19,10 +21,12 @@ class AbstractLogger
     /**
      * System is unusable.
      *
-     * @param string $message
-     * @param array  $context
+     * @param (string) $message
+     *        (array)  $context
      *
-     * @return null
+     * @since 2.0.3
+     *
+     * @return void
      */
     public function emergency($message, array $context = [])
     {
@@ -32,13 +36,12 @@ class AbstractLogger
     /**
      * Action must be taken immediately.
      *
-     * Example: Entire website down, database unavailable, etc. This should
-     * trigger the SMS alerts and wake you up.
+     * @param (string) $message
+     *        (array)  $context
      *
-     * @param string $message
-     * @param array  $context
+     * @since 2.0.3
      *
-     * @return null
+     * @return void
      */
     public function alert($message, array $context = [])
     {
@@ -48,12 +51,12 @@ class AbstractLogger
     /**
      * Critical conditions.
      *
-     * Example: Application component unavailable, unexpected exception.
+     * @param (string) $message
+     *        (array)  $context
      *
-     * @param string $message
-     * @param array  $context
+     * @since 2.0.3
      *
-     * @return null
+     * @return void
      */
     public function critical($message, array $context = [])
     {
@@ -62,12 +65,13 @@ class AbstractLogger
 
     /**
      * Runtime errors that do not require immediate action but should typically
-     * be logged and monitored.
      *
-     * @param string $message
-     * @param array  $context
+     * @param (string) $message
+     *        (array)  $context
      *
-     * @return null
+     * @since 2.0.3
+     *
+     * @return void
      */
     public function error($message, array $context = [])
     {
@@ -77,13 +81,12 @@ class AbstractLogger
     /**
      * Exceptional occurrences that are not errors.
      *
-     * Example: Use of deprecated APIs, poor use of an API, undesirable things
-     * that are not necessarily wrong.
+     * @param (string) $message
+     *        (array)  $context
      *
-     * @param string $message
-     * @param array  $context
+     * @since 2.0.3
      *
-     * @return null
+     * @return void
      */
     public function warning($message, array $context = [])
     {
@@ -93,10 +96,12 @@ class AbstractLogger
     /**
      * Normal but significant events.
      *
-     * @param string $message
-     * @param array  $context
+     * @param (string) $message
+     * @param (array)  $context
      *
-     * @return null
+     * @since 2.0.3
+     *
+     * @return void
      */
     public function notice($message, array $context = [])
     {
@@ -106,12 +111,12 @@ class AbstractLogger
     /**
      * Interesting events.
      *
-     * Example: User logs in, SQL logs.
+     * @param (string) $message
+     * @param (array)  $context
      *
-     * @param string $message
-     * @param array  $context
+     * @since 2.0.3
      *
-     * @return null
+     * @return void
      */
     public function info($message, array $context = [])
     {
@@ -121,10 +126,12 @@ class AbstractLogger
     /**
      * Detailed debug information.
      *
-     * @param string $message
-     * @param array  $context
+     * @param (string) $message
+     * @param (array)  $context
      *
-     * @return null
+     * @since 2.0.3
+     *
+     * @return void
      */
     public function debug($message, array $context = [])
     {
