@@ -17,16 +17,17 @@
 namespace Zest\Expection;
 
 use Zest\View\View;
+use Zest\Common\Logger\Logger;
 
 class Expection
 {
     /**
      * Error handler. Convert all errors to Exceptions by throwing an ErrorException.
      *
-     * @param int    $level   Error level
-     * @param string $message Error message
-     * @param string $file    Filename the error was raised in
-     * @param int    $line    Line number in the file
+     * @param (int)    $level   Error level
+     *        (string) $message Error message
+     *        (string) $file    Filename the error was raised in
+     *        (int)    $line    Line number in the file
      *
      * @since 1.0.0
      *
@@ -42,7 +43,7 @@ class Expection
     /**
      * Exception handler.
      *
-     * @param Exception $exception The exception
+     * @param (Exception) $exception The exception
      *
      * @since 1.0.0
      *
@@ -55,7 +56,6 @@ class Expection
         if ($code != 404) {
             $code = 500;
         }
-        http_response_code($code);
         if (\Config\Config::SHOW_ERRORS) {
             echo '<h1>Fatal error</h1>';
             echo "<p>Uncaught exception: '".get_class($exception)."'</p>";
@@ -63,14 +63,13 @@ class Expection
             echo '<p>Stack trace:<pre>'.$exception->getTraceAsString().'</pre></p>';
             echo "<p>Thrown in '".$exception->getFile()."' on line ".$exception->getLine().'</p>';
         } else {
-            $log = '../Storage /Logs/'.date('Y-m-d').'.log';
-            ini_set('error_log', $log);
-
+            $logger = new Logger();
+            $log = date('Y-m-d').'.log';
             $message = "Uncaught exception: '".get_class($exception)."'";
             $message .= " with message '".$exception->getMessage()."'";
             $message .= "\nStack trace: ".$exception->getTraceAsString();
             $message .= "\nThrown in '".$exception->getFile()."' on line ".$exception->getLine();
-            error_log($message);
+            $logger->setCustumFile($log)->error($message);
             echo View::View("errors/$code");
         }
     }
